--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-06-30 08:32+0000\n"
 "Last-Translator: Antoine Belvire <antoine.belvire@opensuse.org>\n"
 "Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
@@ -246,6 +246,20 @@ msgstr "  Démonter l'instantané :"
 msgid "  Undo changes:"
 msgstr "  Défaire les modifications :"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "(Snapshot %d.)"
@@ -478,8 +492,9 @@ msgstr "Données de configuration non valides."
 msgid "Invalid group."
 msgstr "Groupe non valide."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Format de sortie %s non valide."
 
 #, c-format
@@ -614,13 +629,11 @@ msgstr "Option '%s' inconnue pour la commande '%s'."
 msgid "Unknown type '%s'."
 msgstr "Commande '%s' inconnue."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "Utilisez %s, %s ou %s."
-
-#, fuzzy, c-format
-msgid "Use %s, %s, %s or %s."
-msgstr "Utilisez %s, %s ou %s."
+msgid "Use %1$s."
+msgstr ""
 
 # SLE12
 #, c-format
@@ -679,6 +692,14 @@ msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Utilisation : snapper [--options-globales] <commande> [--options-de-commande] [arguments-de-commande]"
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "Utilisez %s, %s ou %s."
+
+#, fuzzy, c-format
+#~ msgid "Use %s, %s, %s or %s."
+#~ msgstr "Utilisez %s, %s ou %s."
 
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Type d'instantané inconnu."
