--- a/po/gu.po
+++ b/po/gu.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2005-07-29 15:37+0530\n"
 "Last-Translator: i18n@suse.de\n"
 "Language-Team: Gujarati <i18n@suse.de>\n"
@@ -238,6 +238,20 @@ msgid "  Umount snapshot:"
 msgstr "અપરિચિત પ્રકાર."
 
 msgid "  Undo changes:"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
 msgstr ""
 
 #, fuzzy, c-format
@@ -485,9 +499,9 @@ msgstr "ઈસ્યુ ડેટા અમાન્ય."
 msgid "Invalid group."
 msgstr "CRL રિઝન અમાન્ય."
 
-#, c-format
-msgid "Invalid machine readable format %s."
-msgstr ""
+#, fuzzy, c-format
+msgid "Invalid machine readable format '%s'."
+msgstr "અમાન્ય પ્રકાર %1."
 
 #, fuzzy, c-format
 msgid "Invalid snapshot '%s'."
@@ -627,12 +641,10 @@ msgstr "અજાણ્યો એક્સપોર્ટ કમાન્ડ"
 msgid "Unknown type '%s'."
 msgstr "અજાણ્યો કમાન્ડ"
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr ""
-
-#, c-format
-msgid "Use %s, %s, %s or %s."
+msgid "Use %1$s."
 msgstr ""
 
 #, c-format
