--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-05-26 14:40+0000\n"
 "Last-Translator: Jonas Svensson <jonas@ekhorva.se>\n"
 "Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/>\n"
@@ -299,6 +299,20 @@ msgstr "  Avmontera ögonblicksbild:"
 msgid "  Undo changes:"
 msgstr "  Ångra ändringar:"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "(Snapshot %d.)"
@@ -562,9 +576,10 @@ msgstr "Ogiltiga konfigurationsdata."
 msgid "Invalid group."
 msgstr "Ogiltig grupp."
 
-#, c-format
-msgid "Invalid machine readable format %s."
-msgstr ""
+# SLE12
+#, fuzzy, c-format
+msgid "Invalid machine readable format '%s'."
+msgstr "Ogiltig tabellstil %d."
 
 # SLE12
 #, c-format
@@ -720,12 +735,10 @@ msgstr "Alternativet %s för kommandot %s är okänt."
 msgid "Unknown type '%s'."
 msgstr "Kommandot %s är okänt."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr ""
-
-#, c-format
-msgid "Use %s, %s, %s or %s."
+msgid "Use %1$s."
 msgstr ""
 
 # SLE12
