--- a/po/ca.po
+++ b/po/ca.po
@@ -2,16 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
-"PO-Revision-Date: 2020-07-02 07:26+0000\n"
-=======
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-07-29 20:49+0000\n"
->>>>>>> weblate/master
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -241,6 +235,20 @@ msgstr "  Desmunta la instantània:"
 msgid "  Undo changes:"
 msgstr "  Desfés els canvis:"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(Instantània %d.)"
@@ -272,8 +280,7 @@ msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
 msgstr "No es pot suprimir la instantània %d, ja que és la propera instantània per muntar."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
-msgstr ""
-"No se'n pot detectar l'àmbit ja que es desconeix el subvolum per defecte."
+msgstr "No se'n pot detectar l'àmbit ja que es desconeix el subvolum per defecte."
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "No es pot fer un retrocés ja que es desconeix el subvolum per defecte."
@@ -448,6 +455,7 @@ msgid "Illegal snapshot."
 msgstr "Instantània il·legal."
 
 #, fuzzy, c-format
+#| msgid "Invalid ambit %s."
 msgid "Invalid ambit '%s'."
 msgstr "Àmbit no vàlid: %s."
 
@@ -457,8 +465,9 @@ msgstr "Dades de configuració no vàlides."
 msgid "Invalid group."
 msgstr "Grup no vàlid."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Format llegible per a la màquina no vàlid: %s."
 
 #, c-format
@@ -472,6 +481,7 @@ msgid "Invalid subvolume."
 msgstr "Subvolum no vàlid."
 
 #, fuzzy, c-format
+#| msgid "Invalid table style %s."
 msgid "Invalid table style '%s'."
 msgstr "Estil de taula no vàlid: %s."
 
@@ -505,6 +515,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Falta un argument per a l'opció global %s."
 
 #, fuzzy
+#| msgid "Missing command argument."
 msgid "Missing command option."
 msgstr "Falta un argument per a l'ordre."
 
@@ -588,16 +599,15 @@ msgid "Unknown option '%s' for command '%s'."
 msgstr "Opció desconeguda %s per a l'ordre %s."
 
 #, fuzzy, c-format
+#| msgid "Unknown command '%s'."
 msgid "Unknown type '%s'."
 msgstr "Ordre desconeguda: %s."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "Useu %s, %s o %s."
-
-#, fuzzy, c-format
-msgid "Use %s, %s, %s or %s."
-msgstr "Useu %s, %s o %s."
+msgid "Use %1$s."
+msgstr ""
 
 #, c-format
 msgid "Use an integer number from %d to %d."
@@ -643,6 +653,9 @@ msgid "nothing to do"
 msgstr "Res a fer"
 
 #, fuzzy
+#| msgid ""
+#| "root argument can be used only together with no-dbus.\n"
+#| "Try 'snapper --help' for more information."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 "L'argument d'arrel només es pot usar juntament amb no-dbus.\n"
@@ -651,8 +664,20 @@ msgstr ""
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "ús: snapper [--global-options] <command> [--command-options] [command-arguments]"
 
+#, c-format
+#~ msgid "Invalid machine readable format %s."
+#~ msgstr "Format llegible per a la màquina no vàlid: %s."
+
+#, fuzzy, c-format
+#~ msgid "Use %s, %s, %s or %s."
+#~ msgstr "Useu %s, %s o %s."
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Tipus d'instantània desconegut."
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "Useu %s, %s o %s."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tLlista les instantànies des de totes les configuracions accessibles."
