--- a/po/cs.po
+++ b/po/cs.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-09-10 18:47+0000\n"
 "Last-Translator: Aleš Kastner <alkas@volny.cz>\n"
-"Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>"
-"\n"
+"Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -246,6 +245,20 @@ msgstr "  Odpojit snímek:"
 msgid "  Undo changes:"
 msgstr "  Vrátit změny:"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "(Snapshot %d.)"
@@ -477,8 +490,9 @@ msgstr "Neplatná konfigurační data."
 msgid "Invalid group."
 msgstr "Neplatná skupina."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Neplatný strojově čitelný formát %s."
 
 #, c-format
@@ -612,13 +626,11 @@ msgstr "Neznámá volba '%s' pro příkaz '%s'."
 msgid "Unknown type '%s'."
 msgstr "Neznámý typ '%s'."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "Použijte %s, %s or %s."
-
-#, c-format
-msgid "Use %s, %s, %s or %s."
-msgstr "Použijte %s, %s, %s nebo %s."
+msgid "Use %1$s."
+msgstr ""
 
 # SLE12
 #, c-format
@@ -673,6 +685,14 @@ msgid "usage: snapper [--global-options] <command> [--command-options] [command-
 msgstr ""
 "Použití:\n"
 "\tsnapper [--obecné-volby] <příkaz> [--volby-příkazu] [argumenty]"
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "Použijte %s, %s or %s."
+
+#, c-format
+#~ msgid "Use %s, %s, %s or %s."
+#~ msgstr "Použijte %s, %s, %s nebo %s."
 
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Neznámý typ snímku."
