--- a/po/de.po
+++ b/po/de.po
@@ -6,16 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
-"PO-Revision-Date: 2020-07-14 12:36+0000\n"
-=======
-"POT-Creation-Date: 2020-06-18 11:59+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-08-24 00:40+0000\n"
->>>>>>> weblate/master
 "Last-Translator: Sarah Kriesch <ada.lovelace@gmx.de>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -245,6 +239,20 @@ msgstr "  Schnappschuss aushängen:"
 msgid "  Undo changes:"
 msgstr "  Änderungen zurücknehmen:"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(Schnappschuss %d.)"
@@ -276,13 +284,10 @@ msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
 msgstr "Schnappschuss %d kann nicht gelöscht werden, seitdem es der nächste zu mountende Schnappschuss ist."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
-msgstr ""
-"Anwendungsbereich kann nicht erkannt werden, seitdem das Standard-Subvolume "
-"unbekannt ist."
+msgstr "Anwendungsbereich kann nicht erkannt werden, seitdem das Standard-Subvolume unbekannt ist."
 
 msgid "Cannot do rollback since default subvolume is unknown."
-msgstr ""
-"Kann kein Rollback durchführen, seitdem das Standard-Subvolume unbekannt ist."
+msgstr "Kann kein Rollback durchführen, seitdem das Standard-Subvolume unbekannt ist."
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Befehl 'cleanup' erfordert ein Argument."
@@ -454,6 +459,7 @@ msgid "Illegal snapshot."
 msgstr "Illegaler Schnappschuss."
 
 #, fuzzy, c-format
+#| msgid "Invalid ambit %s."
 msgid "Invalid ambit '%s'."
 msgstr "Ungültiger Anwendungsbereich %s."
 
@@ -463,8 +469,9 @@ msgstr "Ungültige Konfigurationsdaten."
 msgid "Invalid group."
 msgstr "Ungültige Gruppe."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Ungültiges maschinenlesbares Format %s."
 
 #, c-format
@@ -478,6 +485,7 @@ msgid "Invalid subvolume."
 msgstr "Ungültiges Subvolumen."
 
 #, fuzzy, c-format
+#| msgid "Invalid table style %s."
 msgid "Invalid table style '%s'."
 msgstr "Ungültiger Tabellenstil %s."
 
@@ -511,6 +519,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Fehlendes Argument für globale Option '%s'."
 
 #, fuzzy
+#| msgid "Missing command argument."
 msgid "Missing command option."
 msgstr "Fehlendes Befehlsargument."
 
@@ -559,16 +568,13 @@ msgid "Snapshot is in use."
 msgstr "Der Schnappschuss ist in Benutzung."
 
 msgid "The ambit can be specified manually using the --ambit option."
-msgstr ""
-"Der Anwendungsbereich kann manuell durch die Verwendung der Option --ambit "
-"angegeben werden."
+msgstr "Der Anwendungsbereich kann manuell durch die Verwendung der Option --ambit angegeben werden."
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "Die Konfiguration \"Root\" ist nicht vorhanden. Snapper ist wahrscheinlich nicht konfiguriert."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Das kann passieren, wenn das System nicht für Rollbacks eingerichtet wurde."
+msgstr "Das kann passieren, wenn das System nicht für Rollbacks eingerichtet wurde."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
@@ -597,16 +603,15 @@ msgid "Unknown option '%s' for command '%s'."
 msgstr "Unbekannte Option '%s' für Befehl '%s'."
 
 #, fuzzy, c-format
+#| msgid "Unknown command '%s'."
 msgid "Unknown type '%s'."
 msgstr "Unbekannter Befehl '%s'."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "%s, %s oder %s verwenden."
-
-#, fuzzy, c-format
-msgid "Use %s, %s, %s or %s."
-msgstr "%s, %s oder %s verwenden."
+msgid "Use %1$s."
+msgstr ""
 
 #, c-format
 msgid "Use an integer number from %d to %d."
@@ -652,6 +657,9 @@ msgid "nothing to do"
 msgstr "keine auszuführenden Aktionen"
 
 #, fuzzy
+#| msgid ""
+#| "root argument can be used only together with no-dbus.\n"
+#| "Try 'snapper --help' for more information."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 "Root-Argument kann nur zusammen mit no-dbus verwendet werden.\n"
@@ -660,8 +668,20 @@ msgstr ""
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Aufruf: snapper [--Globale-Optionen] <Befehl> [--Befehlsoptionen] [Befehlsargumente]"
 
+#, c-format
+#~ msgid "Invalid machine readable format %s."
+#~ msgstr "Ungültiges maschinenlesbares Format %s."
+
+#, fuzzy, c-format
+#~ msgid "Use %s, %s, %s or %s."
+#~ msgstr "%s, %s oder %s verwenden."
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Unbekannter Schnappschuss-Typ."
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "%s, %s oder %s verwenden."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tSnapshots von allen verfügbaren Konfigurationen auflisten."
