--- a/po/id.po
+++ b/po/id.po
@@ -2,16 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
-"PO-Revision-Date: 2019-10-29 08:53+0000\n"
-=======
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-08-24 00:40+0000\n"
->>>>>>> weblate/master
 "Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
-"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/"
-"id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,9 +62,7 @@ msgid "\t--jsonout\t\t\tSet JSON output format."
 msgstr "\t--jsonout\t\t\tAtur format keluaran JSON."
 
 msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-"\t--machine-readable <format>\\Atur format keluaran yang dapat dibaca mesin ("
-"csv, json)."
+msgstr "\t--machine-readable <format>\\Atur format keluaran yang dapat dibaca mesin (csv, json)."
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tOperasikan tanpa DBus."
@@ -100,8 +92,7 @@ msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <path>\t\tBeroperasi pada root target (hanya bekerja tanpa DBus)."
 
 msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-"\t--separator <separator>\t\tPemisah karakter untuk format keluaran CSV."
+msgstr "\t--separator <separator>\t\tPemisah karakter untuk format keluaran CSV."
 
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr "\t--sync, -s\t\t\tSinkronkan setelah penghapusan."
@@ -243,6 +234,20 @@ msgstr "  Lepas snapshot:"
 
 msgid "  Undo changes:"
 msgstr "  Membatalkan perubahan:"
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
 
 #, c-format
 msgid "(Snapshot %d.)"
@@ -448,15 +453,10 @@ msgstr "Snapshot identik."
 msgid "Illegal snapshot."
 msgstr "Snapshot ilegal."
 
-<<<<<<< HEAD
 #, fuzzy, c-format
+#| msgid "Invalid ambit %s."
 msgid "Invalid ambit '%s'."
-msgstr "Snapshot '%s' tidak valid."
-=======
-#, c-format
-msgid "Invalid ambit %s."
 msgstr "Ambit %s tidak valid."
->>>>>>> weblate/master
 
 msgid "Invalid configdata."
 msgstr "Configdata tidak valid."
@@ -464,8 +464,9 @@ msgstr "Configdata tidak valid."
 msgid "Invalid group."
 msgstr "Grup tidak valid."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Format terbaca mesin tidak valid %s."
 
 #, c-format
@@ -478,15 +479,10 @@ msgstr "Snapshot tidak valid."
 msgid "Invalid subvolume."
 msgstr "Subvolume tidak valid."
 
-<<<<<<< HEAD
 #, fuzzy, c-format
+#| msgid "Invalid table style %s."
 msgid "Invalid table style '%s'."
-msgstr "Gaya tabel %d tidak valid."
-=======
-#, c-format
-msgid "Invalid table style %s."
 msgstr "Gaya tabel %s tidak valid."
->>>>>>> weblate/master
 
 msgid "Invalid user."
 msgstr "Pengguna tidak valid."
@@ -518,6 +514,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Argumen tidak ada untuk opsi global '%s'."
 
 #, fuzzy
+#| msgid "Missing command argument."
 msgid "Missing command option."
 msgstr "Argumen perintah tidak ada."
 
@@ -601,15 +598,14 @@ msgid "Unknown option '%s' for command '%s'."
 msgstr "Opsi tidak dikenal '%s' untuk perintah '%s'."
 
 #, fuzzy, c-format
+#| msgid "Unknown command '%s'."
 msgid "Unknown type '%s'."
 msgstr "Perintah '%s' tidak dikenal."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "Gunakan %s, %s atau %s."
-
-#, c-format
-msgid "Use %s, %s, %s or %s."
+msgid "Use %1$s."
 msgstr ""
 
 #, c-format
@@ -655,24 +651,24 @@ msgstr "memodifikasi %s"
 msgid "nothing to do"
 msgstr "tidak ada yang dilakukan"
 
-<<<<<<< HEAD
 #, fuzzy
+#| msgid ""
+#| "root argument can be used only together with no-dbus.\n"
+#| "Try 'snapper --help' for more information."
 msgid "root argument can be used only together with no-dbus.\n"
-msgstr "argumen root hanya dapat digunakan bersama dengan no-dbus."
-=======
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
 msgstr ""
 "argumen root hanya dapat digunakan bersama dengan no-dbus.\n"
 "Coba 'snapper --help' untuk informasi lebih lanjut."
->>>>>>> weblate/master
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "penggunaan: snapper [--global-options] <command> [--command-options] [command-arguments]"
 
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Jenis snapshot tidak dikenal."
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "Gunakan %s, %s atau %s."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tDaftar snapshot dari semua config yang dapat diakses."
