--- a/po/it.po
+++ b/po/it.po
@@ -3,18 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
-"PO-Revision-Date: 2020-02-19 15:54+0000\n"
-"Last-Translator: Davide Aiello <davidea@novilinguists.com>\n"
-"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/>\n"
-=======
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-08-24 16:13+0000\n"
 "Last-Translator: Paolo Za <zapaolo@email.it>\n"
-"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/"
-">\n"
->>>>>>> weblate/master
+"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,9 +63,7 @@ msgid "\t--jsonout\t\t\tSet JSON output format."
 msgstr "\t--jsonout\t\t\tImposta il formato di output JSON."
 
 msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-"\t--leggibile dalla macchina <format>\tImposta un formato di output "
-"leggibile dalla macchina (csv, json)."
+msgstr "\t--leggibile dalla macchina <format>\tImposta un formato di output leggibile dalla macchina (csv, json)."
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tOpera senza DBus."
@@ -103,9 +93,7 @@ msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <percorso>\t\tOpera su radice di destinazione (funziona solo senza DBus)."
 
 msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-"\t--separatore <separator>\t\tCarattere separatore per il formato di output "
-"CSV."
+msgstr "\t--separatore <separator>\t\tCarattere separatore per il formato di output CSV."
 
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr "\t--sync, -s\t\t\tSincronizzazione dopo l'eliminazione."
@@ -248,6 +236,20 @@ msgstr "  Smontaggio istantanea:"
 msgid "  Undo changes:"
 msgstr "  Ripristina le modifiche:"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(Istantanea %d.)"
@@ -283,9 +285,7 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr "Impossibile rilevare l'ambito perché il sotto-volume è sconosciuto."
 
 msgid "Cannot do rollback since default subvolume is unknown."
-msgstr ""
-"Impossibile effettuare il ripristino perché il sotto-volume predefinito è "
-"sconosciuto."
+msgstr "Impossibile effettuare il ripristino perché il sotto-volume predefinito è sconosciuto."
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Il comando 'cleanup' richiede un argomento."
@@ -456,15 +456,10 @@ msgstr "Istantanee identiche."
 msgid "Illegal snapshot."
 msgstr "Istantanea illegale."
 
-<<<<<<< HEAD
 #, fuzzy, c-format
+#| msgid "Invalid ambit %s."
 msgid "Invalid ambit '%s'."
-msgstr "Istantanea '%s' non valida."
-=======
-#, c-format
-msgid "Invalid ambit %s."
 msgstr "Ambito '%s' non valido."
->>>>>>> weblate/master
 
 msgid "Invalid configdata."
 msgstr "Dati di configurazione non validi."
@@ -472,8 +467,9 @@ msgstr "Dati di configurazione non validi."
 msgid "Invalid group."
 msgstr "Gruppo non valido."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Formato leggibile dalla macchina %s non valido."
 
 #, c-format
@@ -486,15 +482,10 @@ msgstr "Istantanee non valide."
 msgid "Invalid subvolume."
 msgstr "Sottovolume non valido."
 
-<<<<<<< HEAD
 #, fuzzy, c-format
+#| msgid "Invalid table style %s."
 msgid "Invalid table style '%s'."
-msgstr "Stile tabella %d non valido."
-=======
-#, c-format
-msgid "Invalid table style %s."
 msgstr "Stile tabella %s non valido."
->>>>>>> weblate/master
 
 msgid "Invalid user."
 msgstr "Utente non valido."
@@ -526,6 +517,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Argomento mancante per l'opzione globale '%s'."
 
 #, fuzzy
+#| msgid "Missing command argument."
 msgid "Missing command option."
 msgstr "Argomento del comando mancante."
 
@@ -580,8 +572,7 @@ msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "Configurazione 'root' inesistente. È probabile che snapper non sia configurato."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Questo può accadere se il sistema non è stato impostato per il ripristino."
+msgstr "Questo può accadere se il sistema non è stato impostato per il ripristino."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
@@ -609,21 +600,15 @@ msgstr "Opzione globale '%s' sconosciuta."
 msgid "Unknown option '%s' for command '%s'."
 msgstr "Opzione '%s' sconosciuta per il comando '%s'."
 
-<<<<<<< HEAD
 #, fuzzy, c-format
+#| msgid "Unknown command '%s'."
 msgid "Unknown type '%s'."
 msgstr "Comando '%s' sconosciuto."
-=======
-msgid "Unknown type of snapshot."
-msgstr "Tipo di istantanea sconosciuto."
->>>>>>> weblate/master
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "Usare %s, %s o %s."
-
-#, c-format
-msgid "Use %s, %s, %s or %s."
+msgid "Use %1$s."
 msgstr ""
 
 #, c-format
@@ -669,18 +654,14 @@ msgstr "modifica di %s"
 msgid "nothing to do"
 msgstr "nessuna operazione da eseguire"
 
-<<<<<<< HEAD
 #, fuzzy
+#| msgid ""
+#| "root argument can be used only together with no-dbus.\n"
+#| "Try 'snapper --help' for more information."
 msgid "root argument can be used only together with no-dbus.\n"
-msgstr "È possibile utilizzare l'argomento radice solo unitamente a no-dbus."
-=======
-msgid ""
-"root argument can be used only together with no-dbus.\n"
-"Try 'snapper --help' for more information."
 msgstr ""
 "L'argomento principale può essere utilizzato solo unitamente a no-dbus.\n"
 "Vedere 'snapper --help' per ulteriori informazioni."
->>>>>>> weblate/master
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
@@ -688,7 +669,11 @@ msgstr ""
 "\tsnapper [--opzioni-globali] <comando> [--opzioni-del-comando] [argomenti-del-comando]"
 
 #~ msgid "Unknown type of snapshot."
-#~ msgstr "Tipo sconosciuto di istantanea."
+#~ msgstr "Tipo di istantanea sconosciuto."
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "Usare %s, %s o %s."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tElenca gli shapshot da tutte le configurazioni accessibili."
