--- a/po/sk.po
+++ b/po/sk.po
@@ -6,16 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2020-09-01 09:04+0200\n"
-"PO-Revision-Date: 2020-07-02 07:26+0000\n"
-=======
-"POT-Creation-Date: 2020-07-13 16:13+0200\n"
+"POT-Creation-Date: 2020-09-03 17:51+0200\n"
 "PO-Revision-Date: 2020-08-24 00:41+0000\n"
->>>>>>> weblate/master
 "Last-Translator: Ferdinand Galko <galko.ferdinand@gmail.com>\n"
-"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>"
-"\n"
+"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -245,6 +239,20 @@ msgstr "  Odpojiť snímku:"
 msgid "  Undo changes:"
 msgstr "  Vrátiť späť zmeny:"
 
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s or %2$s"
+msgstr ""
+
+#. TRANSLATORS: used to construct list of values
+#. %1$s is replaced by first value
+#. %2$s is replaced by second value
+#, c-format
+msgid "%1$s, %2$s"
+msgstr ""
+
 #, c-format
 msgid "(Snapshot %d.)"
 msgstr "(Snímka %d.)"
@@ -279,8 +287,7 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr "Nie je možné zistiť oblasť, pretože predvolený podzväzok nie je známy."
 
 msgid "Cannot do rollback since default subvolume is unknown."
-msgstr ""
-"Nie je možné vykonať návrat späť, pretože predvolený podzväzok nie je známy."
+msgstr "Nie je možné vykonať návrat späť, pretože predvolený podzväzok nie je známy."
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Príkaz 'cleanup' potrebuje jeden argument."
@@ -457,6 +464,7 @@ msgid "Illegal snapshot."
 msgstr "Nepovolená snímka."
 
 #, fuzzy, c-format
+#| msgid "Invalid ambit %s."
 msgid "Invalid ambit '%s'."
 msgstr "Neplatná oblasť '%s'."
 
@@ -466,8 +474,9 @@ msgstr "Neplatné konfiguračné údaje."
 msgid "Invalid group."
 msgstr "Neplatná skupina."
 
-#, c-format
-msgid "Invalid machine readable format %s."
+#, fuzzy, c-format
+#| msgid "Invalid machine readable format %s."
+msgid "Invalid machine readable format '%s'."
 msgstr "Neplatný formát čitateľný strojom %s."
 
 #, c-format
@@ -481,6 +490,7 @@ msgid "Invalid subvolume."
 msgstr "Neplatný podzväzok."
 
 #, fuzzy, c-format
+#| msgid "Invalid table style %s."
 msgid "Invalid table style '%s'."
 msgstr "Neplatný štýl tabuľky %s."
 
@@ -515,6 +525,7 @@ msgid "Missing argument for global option '%s'."
 msgstr "Chýbajúci argument pre globálnu voľbu '%s'."
 
 #, fuzzy
+#| msgid "Missing command argument."
 msgid "Missing command option."
 msgstr "Chýbajúci argument pre príkaz."
 
@@ -599,16 +610,15 @@ msgid "Unknown option '%s' for command '%s'."
 msgstr "Neznáma voľba '%s' pre príkaz '%s'."
 
 #, fuzzy, c-format
+#| msgid "Unknown command '%s'."
 msgid "Unknown type '%s'."
 msgstr "Neznámy príkaz '%s'."
 
+#. TRANSLATORS: a list of possible values
+#. %1$s is replaced by list of possible values
 #, c-format
-msgid "Use %s, %s or %s."
-msgstr "Použite %s, %s alebo %s."
-
-#, fuzzy, c-format
-msgid "Use %s, %s, %s or %s."
-msgstr "Použite %s, %s alebo %s."
+msgid "Use %1$s."
+msgstr ""
 
 #, c-format
 msgid "Use an integer number from %d to %d."
@@ -654,6 +664,9 @@ msgid "nothing to do"
 msgstr "nie je čo vykonať"
 
 #, fuzzy
+#| msgid ""
+#| "root argument can be used only together with no-dbus.\n"
+#| "Try 'snapper --help' for more information."
 msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 "Argument root možno použiť len spoločne s no-dbus.\n"
@@ -662,8 +675,20 @@ msgstr ""
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "použitie: snapper [--globálne-voľby] <príkaz> [--voľby-príkazu] [argumenty-príkazu]"
 
+#, c-format
+#~ msgid "Invalid machine readable format %s."
+#~ msgstr "Neplatný formát čitateľný strojom %s."
+
+#, fuzzy, c-format
+#~ msgid "Use %s, %s, %s or %s."
+#~ msgstr "Použite %s, %s alebo %s."
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Neznámy typ snímky."
+
+#, c-format
+#~ msgid "Use %s, %s or %s."
+#~ msgstr "Použite %s, %s alebo %s."
 
 #~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 #~ msgstr "\t--all-configs, -a\t\tZoznam snímok zo všetkých dostupných konfigurácií."
